# openapi_filtered.yaml
@@ -1682,6 +1682,8 @@ paths:
             schema:
               type: object
               properties:
+                connectivity_assurance:
+                  $ref: '#/components/schemas/FleetConnectivityAssurance'
                 label:
                   description: The label, or name,  for the Fleet.
                   type: string
@@ -1746,6 +1748,8 @@ paths:
                   type: array
                   items:
                     type: string
+                connectivity_assurance:
+                  $ref: '#/components/schemas/FleetConnectivityAssurance'
                 label:
                   description: The label for the Fleet.
                   type: string
@@ -2501,7 +2505,7 @@ paths:
       - usage
   /v1/projects/{projectOrProductUID}/usage/events:
     get:
-      operationId: getProjectEventsUsage
+      operationId: getEventsUsage
       description: Get events usage for a project with time range and period aggregation,
         when endDate is 0 or unspecified the current time is implied
       parameters:
@@ -3127,6 +3131,17 @@ components:
       required: true
       schema:
         type: string
+    routeUIDParamQuery:
+      description: A Route UID.
+      explode: true
+      in: query
+      name: routeUID
+      required: false
+      schema:
+        type: array
+        items:
+          type: string
+      style: form
     selectFieldsParam:
       description: Comma-separated list of fields to select from JSON payload (e.g.,
         "field1,field2.subfield,field3"), this will reflect the columns in the CSV
@@ -4479,6 +4494,8 @@ components:
     Fleet:
       type: object
       properties:
+        connectivity_assurance:
+          $ref: '#/components/schemas/FleetConnectivityAssurance'
         created:
           description: RFC3339 timestamp in UTC
           type: string
@@ -4506,6 +4523,17 @@ components:
       - uid
       - label
       - created
+    FleetConnectivityAssurance:
+      type: object
+      properties:
+        enabled:
+          description: Whether Connectivity Assurance is enabled for this fleet
+          type: boolean
+      example:
+        enabled: true
+      nullable: true
+      required:
+      - enabled
     FleetRule:
       description: JSONata expression that will be evaluated to determine device membership
         into this fleet, if the expression evaluates to a 1, the device will be included,
@@ -5463,15 +5491,28 @@ components:
           format: date-time
           example: '2025-07-23T00:00:00Z'
         platform_events:
+          description: Total platform events. Platform events are _log, _session,
+            _health, and _geolocate events some of which are send from the device,
+            some generated by notehub. These events are not billed.
           type: integer
           example: 15
         total_events:
+          description: Total events the device sent to notehub, including associated
+            notehub generated events
           type: integer
           example: 42
+        watchdog_events:
+          description: Watchdog events are events generated by notehub when a watchdog
+            timer is configured for a device to indicate is has not been online for
+            a period of time. These events are billed but should not be used to indicate
+            a device is active, or connected, at this time.
+          type: integer
+          example: 10
       required:
       - period
       - total_events
       - platform_events
+      - watchdog_events
     UsageEventsResponse:
       type: object
       properties:
@@ -5492,8 +5533,9 @@ components:
           format: date-time
           example: '2025-07-23T00:00:00Z'
         route:
-          description: The route serial number (only present when aggregate is 'route')
+          description: The route UID (only present when aggregate is 'route')
           type: string
+          example: route:cbd20093cba58392c9f9bbdd0cdeb1a0
         successful_routes:
           type: integer
           example: 38
