# src/notehub_py/models/usage_events_data.py
@@ -19,7 +19,7 @@ import re  # noqa: F401
 import json
 
 from datetime import datetime
-from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
+from pydantic import BaseModel, ConfigDict, Field, StrictInt, StrictStr
 from typing import Any, ClassVar, Dict, List, Optional
 from typing import Optional, Set
 from typing_extensions import Self
@@ -33,14 +33,22 @@ class UsageEventsData(BaseModel):
     device: Optional[StrictStr] = None
     fleet: Optional[StrictStr] = None
     period: datetime
-    platform_events: StrictInt
-    total_events: StrictInt
+    platform_events: StrictInt = Field(
+        description="Total platform events. Platform events are _log, _session, _health, and _geolocate events some of which are send from the device, some generated by notehub. These events are not billed."
+    )
+    total_events: StrictInt = Field(
+        description="Total events the device sent to notehub, including associated notehub generated events"
+    )
+    watchdog_events: StrictInt = Field(
+        description="Watchdog events are events generated by notehub when a watchdog timer is configured for a device to indicate is has not been online for a period of time. These events are billed but should not be used to indicate a device is active, or connected, at this time."
+    )
     __properties: ClassVar[List[str]] = [
         "device",
         "fleet",
         "period",
         "platform_events",
         "total_events",
+        "watchdog_events",
     ]
 
     model_config = ConfigDict(
@@ -98,6 +106,7 @@ class UsageEventsData(BaseModel):
                 "period": obj.get("period"),
                 "platform_events": obj.get("platform_events"),
                 "total_events": obj.get("total_events"),
+                "watchdog_events": obj.get("watchdog_events"),
             }
         )
         return _obj
